# Exercicios-Maratona

./: CMakeLists.txt  LICENSE  README.md
Lista1/: amigos.cpp  figurinhas.cpp  segredo-cofre.cpp
Semana1/: figurinhas-otimizado.cpp
Semana2/: jogo.cpp  nota.cpp  wifi.cpp
Semana2/js/: README.md  jogo.js  nota.js  wifi.js
Semana3/: visita.cpp
Semana3/js/: visita.js  visita.txt
Semana4/allysson/: chuva.cpp
Semana4/henrique/: chuva.cpp
Semana5/: torneio.h
Semana5/allysson/: baralho.cpp  musica.cpp  paciente.cpp  tempo.cpp  torneio.cpp  zero.cpp
Semana5/henrique/: tempo.cpp  torneio.cpp  zero.cpp
Semana6/allysson/: detetive.cpp  rodovia.cpp  rodoviaRecursiva.cpp
Semana7/allysson/: cloud.cpp  labirintos.cpp  tita.cpp
Semana8/: vagoes.cpp
