cmake_minimum_required(VERSION 3.27)
project(Exercicios_Maratona)

set(CMAKE_CXX_STANDARD 17)

add_executable(Exercicios_Maratona main.cpp)
add_executable(amigos Semana1/amigos.cpp)
add_executable(figurinhas Semana1/figurinhas.cpp)
add_executable(segredo-cofre Semana1/segredo-cofre.cpp)
add_executable(figurinhas-otimizado Semana1/figurinhas-otimizado.cpp)
add_executable(jogo Semana2/jogo.cpp)
add_executable(nota Semana2/nota.cpp)
add_executable(wifi Semana2/wifi.cpp)
