cmake_minimum_required(VERSION 3.27)
project(Exercicios_Maratona)

set(CMAKE_CXX_STANDARD 17)

add_executable(Exercicios_Maratona main.cpp)

add_executable(figurinhas Semana1/figurinhas.cpp)
add_executable(segredo-cofre Semana1/segredo-cofre.cpp)
add_executable(figurinhas-otimizado Semana1/figurinhas-otimizado.cpp)
add_executable(jogo Semana2/jogo.cpp)
add_executable(nota Semana2/nota.cpp)
add_executable(wifi Semana2/wifi.cpp)
add_executable(visita Semana3/visita.cpp)
add_executable(chuvaH Semana4/henrique/chuva.cpp)
add_executable(torneio Semana5/allysson/torneio.cpp)
add_executable(tempo Semana5/allysson/tempo.cpp)
add_executable(torneioH Semana5/henrique/torneio.cpp)
add_executable(tempoH Semana5/henrique/tempo.cpp)
add_executable(zero Semana5/allysson/zero.cpp)
add_executable(zeroH Semana5/henrique/zero.cpp)
add_executable(chuva Semana4/allysson/chuva.cpp)
add_executable(baralho Semana5/allysson/baralho.cpp)
